Moved Background Color to css file and attempted to fix the text showing up as black on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ Sets extra attributes so that the site looks nicer
 body
 {
     text-align: center;
+    text-emphasis-color: white;
+    background-color: black;
 }
 h1
 {
